--- a/index.html
+++ b/index.html
@@ -121,5 +121,7 @@ bool student = true ;
 bool permission_accepted = false ;</code></pre>
         </section>
     </main>
+    <script src="https://kit.fontawesome.com/c9665a1dd0.js" crossorigin="anonymous"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
